--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Deploy to Vercel
         env:
-          VERCEL_TOKEN: ${{ secrets.lemonadestand }}  # Add this secret in GitHub repo settings
+          VERCEL_TOKEN: ${{ secrets.the_brew }}  # Add this secret in GitHub repo settings
         run: npx vercel --prod --token $VERCEL_TOKEN
